@@ -1801,6 +1801,10 @@ options(datatable.alloccol=NULL)
 test(633, data.table(a=1:3), error="n must be integer length 1")
 options(datatable.alloccol=old)
 
+# Test that with=FALSE by number isn't messed up by dup column names, #2025 
+DT = data.table(a=1:3,a=4:6)
+test(634, DT[,2:=200L,with=FALSE], data.table(a=1:3,a=200L)) 
+
 
 # Next, follow through irows in assign step after eval in dogroups to check redundancy
 
